--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ header#main-header {
   height: 46px;
   background: #fff;
   box-shadow: 0 1px 1px rgba(0, 0, 0, .25);
+  position: relative;
+  z-index: 1;
 } 
 
 header#main-header .content {
@@ -89,3 +91,84 @@ header#main-header div.side input {
   width: 220px;
   background: #f5f8fa url('/images/search.svg') no-repeat 190px center; 
 } 
+
+div.banner {
+  height: 380px;
+  width: 100%;
+  background: #3bb9e3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+}
+
+div.bar {  
+  height: 59px;
+  background: #fff;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, .25);
+}
+
+div.bar .content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 285px;
+  height: 100%;
+}
+
+div.bar .content ul {
+  list-style: none;
+  display: flex;
+  height: 100%;
+}
+
+div.bar .content ul li {
+  display: flex;
+  flex-direction: column;
+  padding: 0 15px;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+}
+
+div.bar .content ul li.active::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: #3bb9e3;
+}
+
+div.bar .content ul li span {
+  color: #667580;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+div.bar .content ul li strong {
+  color: #667580;
+  font-weight: bold;
+  font-size: 18px;
+  margin-top: 2px;
+}
+
+div.bar .content ul li.active strong {
+  color: #3bb9e3;
+}
+
+div.bar .content .actions {
+  display:flex;
+}
+
+div.bar .content .actions button{
+  border: 1px solid #3bb9e3;
+  border-radius: 16px;
+  background: #fff;
+  height: 34px;
+  width: 90px;
+  color: #3bb9e3;
+  font-weight: bold;
+  margin-right: 20px;
+}
